...
    android:layout_height="match_parent"
    android:background="@drawable/main_menu_admin"
    tools:context=".MainMenu">


    <TextView
        android:id="@+id/welcomeAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:gravity="center"
        android:text=""
        android:textAlignment="center"
...
        android:layout_marginStart="56dp"
        android:layout_marginTop="252dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/createSurveyAdmin"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="408dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
...
