<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/opening_screen"
    tools:context=".OpeningScreen">

    <!-- Adjusted positions and margins for the buttons -->

    <Button
        android:id="@+id/lgnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="205dp"
        android:alpha="0.5"
        android:background="@android:color/transparent" />

    <Button
        android:id="@+id/rstButton"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="118dp"
        android:alpha="0.5"
        android:background="@android:color/transparent" />
</RelativeLayout>
