<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/register_background"
        tools:context=".LoginPage">


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="269dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/custom_input"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="12dp"
            android:drawableStart="@drawable/custom_email_icon"
            android:hint="Email Address"
            android:padding="14dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp" />

        <EditText
            android:id="@+id/full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="8dp"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            android:drawableStart="@drawable/custom_name_icon"
            android:background="@drawable/custom_input"
            android:drawableLeft="@drawable/ic_name"
            android:drawablePadding="12dp"
            android:hint="Fullname"
            android:padding="14dp"/>

        <EditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/full_name"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="8dp"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            android:background="@drawable/custom_input"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="12dp"
            android:drawableStart="@drawable/custom_lock_icon"
            android:hint="Password"
            android:padding="14dp"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/Password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Password"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="8dp"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_lock_2_icon"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="10dp"
            android:hint="Verify Password"
            android:padding="14dp"
            android:inputType="textPassword" />


        <Button
            android:id="@+id/signup_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Password2"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="#FDFDFD"
            android:text="Create new account"
            android:textColor="#078888"/>

        <TextView
            android:id="@+id/to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signup_btn"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true"
            android:text="@string/already_have_an_account_login"
            android:textColor="@color/dark_grey"
            android:textSize="20dp" />


    </RelativeLayout>
